[package]
name = "mach-sys"
version = "0.5.0"
authors = [
  # authors of original "mach"
  "Nick Fitzgerald <fitzgen@gmail.com>",
  "David Cuddeback <david.cuddeback@gmail.com>",
  "Gonzalo Brito Gadeschi <gonzalobg88@gmail.com>",

  # authors of "mach2"
  "Yuki Okushi <jtitor@skiff.com>",

  # authors of "machx"
  "kekeimiku <kekelanact@gmail.com>",

  # :-)
  "Delta4 <delta4chat@gmx.com>"
]
license = "BSD-2-Clause OR MIT OR Apache-2.0"
description = "forked from original mach, and merge from mach2/machx. A Rust interface to the user-space API of the Mach 3.0 kernel that underlies OSX."
repository = "https://github.com/delta4chat/mach"
readme = "README.md"
keywords = ["kernel", "macos", "darwin", "mach", "bindings"]
categories = ["ffi", "api-bindings", "external-ffi-bindings", "no-std", "os"]
edition = "2021"

[dev-dependencies]
fastrand="2.0.0"

[badges]
maintenance = { status = "passively-maintained" }

[features]
default  = []
unstable = [] # Uses newer APIs (but unstable)
alloc    = [] # Uses extern crate alloc
std      = [] # Uses rust standard library

[workspace]
members = ["mach-test"]

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"

