[package]
name = "mach-sys"
version = "0.5.2"
authors = [
  # authors of original "mach"
  "Nick Fitzgerald <fitzgen@gmail.com>",
  "David Cuddeback <david.cuddeback@gmail.com>",
  "Gonzalo Brito Gadeschi <gonzalobg88@gmail.com>",

  # authors of "mach2"
  "Yuki Okushi <jtitor@skiff.com>",

  # authors of "machx"
  "kekeimiku <kekelanact@gmail.com>",

  # :-)
  "Delta4 <delta4chat@gmx.com>"
]
license = "BSD-2-Clause OR MIT OR Apache-2.0"
description = "forked from original mach, and merge from mach2/machx. A Rust interface to the user-space API of the Mach 3.0 kernel that underlies OSX."
repository = "https://github.com/delta4chat/mach"
readme = "README.md"
keywords = ["kernel", "macos", "darwin", "mach", "bindings"]
categories = ["api-bindings", "external-ffi-bindings", "no-std", "os"]
edition = "2021"

[dev-dependencies]
fastrand="2.0.0"
[build-dependencies]
fastrand="2.0.0"

[badges]
maintenance = { status = "passively-maintained" }

[features]
# there is no default features,
# and should not to add anything in future.
default  = []

# Uses newer APIs (but unstable)
unstable = ["dep:mcslock", "dep:generic_once_cell"]

# Uses extern crate alloc
alloc    = []

# Uses rust standard library
std      = ["dep:parking_lot", "dep:once_cell"] 

[workspace]
members = ["mach-test"]

[dependencies]

# spinning locks for no_std
mcslock           = { optional = true, version = "0.1.1", features = ["lock_api"], default-features = false }
generic_once_cell = { optional = true, version = "0.1.1" }

# OS locks for std
parking_lot       = { optional = true, version = "0.12.1", features = ["deadlock_detection"] }
once_cell         = { optional = true, version = "1.19.0", features = ["portable-atomic", "race", "parking_lot"] }

[package.metadata.docs.rs]
no-default-features = true
all-features        = true

default-target = "x86_64-apple-darwin"
targets        = [
  "aarch64-apple-darwin",
  "aarch64-apple-ios",
  #"aarch64-apple-ios-macabi",
  #"aarch64-apple-ios-sim",
  "aarch64-apple-tvos",
  #"aarch64-apple-tvos-sim",
  #"aarch64-apple-watchos-sim",
  "arm64_32-apple-watchos",
  "armv7k-apple-watchos",
  #"armv7s-apple-ios",
  "i386-apple-ios",
  "i686-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-apple-ios",
  #"x86_64-apple-ios-macabi",
  "x86_64-apple-tvos",
  #"x86_64-apple-watchos-sim",
  #"x86_64h-apple-darwin",
]

